k8s-manifests/08-clientes_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientes-api-lb
  namespace: flask-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  labels:
    app: flask-app
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
